# git-diff

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
git_diff/: __init__.py  __main__.py  cli.py  git_data.py  server.py
git_diff/templates/: index.html
